{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 20,
  "lineage": "fb0a6675-e70c-e947-b2d9-6863f531faf8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05fe69d99e40eb892",
            "public_dns": "ec2-34-255-66-187.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.66.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-inecsoft-nat-ip-gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03590b7db5f693032",
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-IGW"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fe69d99e40eb892",
            "id": "nat-097673508562e0a26",
            "network_interface_id": "eni-0521b28eabea588a6",
            "private_ip": "10.0.1.216",
            "public_ip": "34.255.66.187",
            "subnet_id": "subnet-065cbc51a0119dd2d",
            "tags": {
              "Name": "dev-inecsoft-vpc_nat_gateway"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.my_vpc_gw",
            "aws_subnet.my_vpc_subnet_public[0]"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0031fafdf36972401",
            "owner_id": "895352585421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-097673508562e0a26",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_vpc_route_table_nat_private"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-018af91436b677685",
            "owner_id": "895352585421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03590b7db5f693032",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MY VPC Route table public"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_internet_gateway.my_vpc_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308e0f1a7aa2f8ed",
            "route_table_id": "rtb-018af91436b677685",
            "subnet_id": "subnet-065cbc51a0119dd2d"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_public",
            "aws_subnet.my_vpc_subnet_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0b63a28abf63de9",
            "route_table_id": "rtb-018af91436b677685",
            "subnet_id": "subnet-07e0f1f3e008f5c3c"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_public",
            "aws_subnet.my_vpc_subnet_public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e7e4e5ffd823ae1",
            "route_table_id": "rtb-018af91436b677685",
            "subnet_id": "subnet-07a6d3986e8c4938d"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_public",
            "aws_subnet.my_vpc_subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005182dcc95a1af6d",
            "route_table_id": "rtb-0031fafdf36972401",
            "subnet_id": "subnet-0109fb20e65b54c82"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_private",
            "aws_subnet.my_vpc_subnet_private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd038a9f85a709de",
            "route_table_id": "rtb-0031fafdf36972401",
            "subnet_id": "subnet-0a8e12aacdb052550"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_private",
            "aws_subnet.my_vpc_subnet_private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffab445551c49792",
            "route_table_id": "rtb-0031fafdf36972401",
            "subnet_id": "subnet-024c0e8921599ceda"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_private",
            "aws_subnet.my_vpc_subnet_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:security-group/sg-07763e1a4ba39e334",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07763e1a4ba39e334",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_security_group",
            "name_prefix": null,
            "owner_id": "895352585421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-inecsoft-security_group}"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_subnet_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-0109fb20e65b54c82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0109fb20e65b54c82",
            "map_public_ip_on_launch": false,
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-subnet_private-1"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-0a8e12aacdb052550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0a8e12aacdb052550",
            "map_public_ip_on_launch": false,
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-subnet_private-2"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-024c0e8921599ceda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-024c0e8921599ceda",
            "map_public_ip_on_launch": false,
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-subnet_private-3"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_subnet_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-065cbc51a0119dd2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-065cbc51a0119dd2d",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-subnet_public-1"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-07e0f1f3e008f5c3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07e0f1f3e008f5c3c",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-subnet_public-2"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-07a6d3986e8c4938d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07a6d3986e8c4938d",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-subnet_public-3"
            },
            "vpc_id": "vpc-0a8c754055a5d90e5"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:vpc/vpc-0a8c754055a5d90e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07924df97be30d38f",
            "default_route_table_id": "rtb-0b13a7b26b09a2831",
            "default_security_group_id": "sg-05ae33ddf0d9e98ab",
            "dhcp_options_id": "dopt-ce1e70a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a8c754055a5d90e5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b13a7b26b09a2831",
            "owner_id": "895352585421",
            "tags": {
              "Name": "dev-inecsoft-VPC"
            }
          }
        }
      ]
    }
  ]
}